[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
line-bot-sdk = "^3.23.0"
jwcrypto = "^1.5.7"
pyjwt = "^2.13.0"

[tool.poetry.dev-dependencies]
ruff = "^0.15.17"
pytest = "^9.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
