[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
line-bot-sdk = "^3.24.0"
jwcrypto = "^1.5.8"
pyjwt = "^2.13.0"

[tool.poetry.dev-dependencies]
ruff = "^0.15.20"
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
